<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_number_prompt">Enter 1st number: </string>
    <string name="second_number_prompt">Enter 2nd number: </string>
    <string name="add_button_prompt"> + </string>
    <string name="subtract_button_prompt"> - </string>
    <string name="multiply_button_prompt"> X </string>
    <string name="divide_button_prompt"> / </string>
    <string name="reset_button_prompt"> C </string>
    <string name="add_prompt">The sum is </string>
    <string name="subtraction_prompt">The difference is </string>
    <string name="multiply_prompt">The product is </string>
    <string name="divide_prompt">The quotient is </string>

</resources>
